2008-03-10  Tor Lillqvist  <tml@novell.com>

	Bug 520286 - Non-deletable window has no minimize / maximize buttons

	* gdk/win32/gdkmain-win32.c (_gdk_win32_window_style_to_string):
	New debugging output function that decodes a set of WS_* bits.

	* gdk/win32/gdkprivate-win32.h: Declare it.

	* gdk/win32/gdkwindow-win32.c (update_single_system_menu_entry):
	New function that enables or disables one menu entry in the system
	menu of a top-level window. (The corresponding decoration will
	then also be enabled or disabled (grayed).)

	(update_style_bits): Do as the comment says and don't try to
	update the window style based on the GdkWMFunctions set for the
	window.
		   
	(update_system_menu): New function that enables or disables the
	system menu entries based on a window's stored set of
	GdkWMFunctions.

	(gdk_window_set_functions): Call update_system_menu() instead of
	update_style_bits().

2008-03-10  Emmanuele Bassi  <ebassi@gnome.org>

	* README.in: Reword the 2.14 release notes entry about the
	deprecation of the gtkitemfactory.h header, and fix typos
	and grammar.

2008-03-08  Alberto Ruiz  <aruiz@gnome.org>

	* modules/engines/ms-windows/msw_style.c (draw_shadow):
	Do not draw frame if parent if combobox.
	(draw_box):
	Uses scrollbar width system metrics for combobox button.
	Fixes #461805 for XP theme engine.

2008-03-07  Johan Dahlin  <johan@gnome.org>

	* gtk/gtkbuilder.c:
	* gtk/gtkbuilderparser.c:
	* gtk/gtkbuilderprivate.h:
	* gtk/gtkiconfactory.c:
	* tests/buildertest.c:
	- Treat enums like enums and not values
	- Avoid invalid free, in case of more than two sources
	- Add better error messages
	- Add much improved tests
	(#520979, Christian Persch)

2008-03-07  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtkiconfactory.c (gtk_icon_factory_buildable_custom_tag_end):
	Fix build.

2008-03-06  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=505857 -